--- a/src/app/component/shared/login/login.component.html
+++ b/src/app/component/shared/login/login.component.html
@@ -6,34 +6,39 @@
   <form [formGroup]="loginForm" (ngSubmit)="submitForm(loginForm.value)">
 
     <div class="row">
-      <div class="col-md-4"></div>
-      <div class="col-md-4">
+      <!-- <div class="col-md-4"></div> -->
+      <div class="col-xl-4 col-md-6   col-xl-offset-4 col-md-offset-3"  style="margin:0 auto;">
         <div class="form-group" [ngClass]="{'has-error':!loginForm.controls['username'].valid && loginForm.controls['username'].touched}">
           <label><strong>Username</strong></label>
           <div class="input-group">
             <div class="input-group-addon"> <i class="fa fa-user"></i></div>
             <input class="form-control" type="text" placeholder="Enter Username" [formControl]="loginForm.controls['username']">
           </div>
-          <div *ngIf="loginForm.controls['username'].touched && loginForm.controls['username'].hasError('required')" class="alert alert-danger">
-            Enter Your Username
+          <div *ngIf="loginForm.controls['username'].touched || loginForm.controls['username'].dirty">
+            <div *ngIf="loginForm.controls['username'].hasError('required')" class="uName"> Enter Your Username</div>
           </div>
         </div>
 
         <div class="form-group" [ngClass]="{'has-error':!loginForm.controls['password'].valid && loginForm.controls['password'].touched}">
           <label><strong>Password</strong></label>
           <div class="input-group">
-          <div class="input-group-addon"> <i class="fa fa-unlock-alt"></i></div>
-          <input class="form-control" type="text" placeholder="Enter Password" [formControl]="loginForm.controls['password']">
+            <div class="input-group-addon"> <i class="fa fa-unlock-alt"></i></div>
+            <input class="form-control" type="text" placeholder="Enter Password" [formControl]="loginForm.controls['password']">
           </div>
-          <div *ngIf="loginForm.controls['password'].touched && loginForm.controls['password'].hasError('required')" class="alert alert-danger">
-            Enter Your Password
+          <div *ngIf="loginForm.controls['password'].touched || loginForm.controls['password'].dirty">
+              <div *ngIf="loginForm.controls['password'].hasError('required')" class="password">Enter Your Password</div>
+
           </div>
         </div>
 
-        <button type="submit" class="btn btn-outline-info my-2 my-sm-0" style="text-align: center;" routerLink="/signup" [disabled]="!loginForm.valid">Submit</button>
+        <button type="submit" class="btn btn-outline-info my-2 my-sm-0" style="text-align: center;" routerLink="/signup" [disabled]="!loginForm.valid"> <i class="fa fa-sign-in" aria-hidden="true"></i> Log In</button>
+        <input type="checkbox" id=checkbox > <p class="remember">Remember me </p>
+
       </div>
     </div>
+
   </form>
+  <p class="forget-password"> <a routerLink="/forgetPassword"> Lost Your Password? Click here to reset </a> </p>
   <p class="account"> Are you new to <strong style="color : orangered">s3iology</strong> ? <a routerLink="/signup"> <strong>SignUp </strong> </a>    here </p>
 
 </div>
