--- a/src/app/component/shared/signup/signup.component.css
+++ b/src/app/component/shared/signup/signup.component.css
@@ -13,6 +13,10 @@ h2{
         border-bottom: 2px solid #eeeeee
     }
 
+.jumbotron{
+    padding-top:5px;
+}    
+
 .alert{
     
         width:245px;
